fixed overlap of heroimage and adjusted font sizes

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     --backgroundImage-Color: hsl(259, 12%, 15%);
     --backgroundColor: hsl(216.49, 85.06%, 15.12%);
     --normal-TextColor: hsl(185, 49%, 50%);
+    --buttonBackgroundBlue:hsl(216, 90%, 40%);;
 }
 
 html,body{
@@ -27,7 +28,7 @@ html,body{
 main {
     text-align: center;
     color: var(--normal-TextColor);
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     font-family: 'Inter', 'Segoe UI', sans-serif;
     background-color: var(--backgroundImage-Color);
     line-height: 1.4;
@@ -42,6 +43,7 @@ main {
 
 h2 {
     font-size: 3.5em;
+    padding-bottom: 1rem;
 }
 
 h3 {
@@ -63,6 +65,7 @@ a {
 
 .button-link {
     display: inline-block;
+    font-weight: 600;
     transition: transform 0.2s ease, background-color 0.3s ease, box-shadow 0.2s ease;
 }
 
@@ -90,7 +93,7 @@ a {
 
 .hero-text {
     text-align: center;
-    margin-top: -2rem; /* pulls text up so it “nests” under brain */
+    margin-top: -1rem; /* pulls text up so it “nests” under brain */
 
 }
 
@@ -144,9 +147,8 @@ a {
 
 .resume-button {
     padding: 1rem 2.5rem;
-    background-color: hsl(212.35, 100%, 47.65%);
+    background-color: var(--buttonBackgroundBlue);
     color: white;
-    font-weight: 600;
     border-radius: 8px;
     font-size: 1rem;
 }
@@ -191,9 +193,8 @@ a {
     gap: 0.5rem;
     padding: 0.5rem 1rem; /* internal padding */
     border-radius: 1rem;
-    background-color: hsl(216, 90%, 40%);
-    color: white; /* text color */
-    font-weight: 600;
+    background-color: var(--buttonBackgroundBlue);
+    color: white;
     margin: 1rem auto 0 auto; /* top margin + horizontal centering */
     width: fit-content; /* shrink to content */
 }
@@ -267,7 +268,7 @@ a {
     color: black;
     padding: 1rem 1.5rem; /* comfortable clickable size */
     font-size: 1.5rem;
-    font-weight: 600;
+
     margin: 1rem; /* space above/below */
 }
 
@@ -313,7 +314,7 @@ footer {
 @media (max-width: 768px) {
 
     main {
-        font-size: 1rem
+        font-size: 1.2rem
     }
 
     h2 {
@@ -325,12 +326,12 @@ footer {
     }
 
     #name {
-        font-size: 4.5em;
+        font-size: 3rem;
     }
 
     #name-description {
         font-style: italic;
-        font-size: 3rem;
+        font-size: 2.5rem;
     }
 
     .principle, .about-me-content {
